// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header - Back renders as a button 1`] = `
.emotion-2 {
  margin: 0 1rem 0 0;
  padding: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  vertical-align: middle;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0 {
  vertical-align: middle;
}

.emotion-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  className="emotion-2"
  onClick={[Function]}
>
  <svg
    className="emotion-0"
    color="#0cd664"
    fontSize="1.5rem"
    height="1em"
    viewBox="0 0 20 8"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5.08 8V4.8H20V3.2H5.08V0L0 4z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="emotion-1"
  >
    Sample link
  </span>
</button>
`;

exports[`Header - Back renders as a component 1`] = `
.emotion-2 {
  margin: 0 1rem 0 0;
  padding: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  vertical-align: middle;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0 {
  vertical-align: middle;
}

.emotion-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<a
  className="emotion-2"
  id="test-link"
>
  <svg
    className="emotion-0"
    color="#0cd664"
    fontSize="1.5rem"
    height="1em"
    viewBox="0 0 20 8"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5.08 8V4.8H20V3.2H5.08V0L0 4z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="emotion-1"
  >
    Sample link
  </span>
</a>
`;

exports[`Header - Back renders as an anchor by default 1`] = `
.emotion-2 {
  margin: 0 1rem 0 0;
  padding: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  vertical-align: middle;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0 {
  vertical-align: middle;
}

.emotion-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<a
  className="emotion-2"
  href="#"
>
  <svg
    className="emotion-0"
    color="#0cd664"
    fontSize="1.5rem"
    height="1em"
    viewBox="0 0 20 8"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5.08 8V4.8H20V3.2H5.08V0L0 4z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
  <span
    className="emotion-1"
  >
    Sample link
  </span>
</a>
`;
